wp/wp-wd-Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: wp-wd
    tier: frontend
    track: stable
  name: wp-wd
  namespace: wp-wd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wp-wd
      name: wp-nginx
      tier: frontend
      track: stable
  strategy:
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: wp-wd
        name: wp-nginx
        tier: frontend
        track: stable
    spec:
      containers:
      - env:
        - name: WORDPRESS_DB_HOST
          value: 127.0.0.1:3306
        - name: WORDPRESS_DB_USER
          valueFrom:
            secretKeyRef:
              name: cloudsql-db-credentials
              key: username
        - name: WORDPRESS_DB_PASSWORD
          valueFrom:
            secretKeyRef:
              name: cloudsql-db-credentials
              key: password
        - image: gcr.io/cloudsql-docker/gce-proxy:1.11
          name: cloudsql-proxy
          command: ["/cloud_sql_proxy",
                    "-instances=abovecrypto-web-197219:us-central1:web-db=tcp:3306",
                    "-credential_file=/secrets/cloudsql/credentials.json"]
        image: daxio/wordpress-redis:v1.6-fpm
        imagePullPolicy: IfNotPresent
        name: wp
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /secrets/cloudsql
          name: cloudsql-instance-credentials
          readOnly: true
        - mountPath: /var/www/html
          name: wp-persistent-storage
        - mountPath: /usr/local/etc/php/conf.d
          name: php
        - mountPath: /var/run/nginx-cache
          name: cache
      - image: daxio/nginx-naxsi:v1.1.3
        imagePullPolicy: IfNotPresent
        name: wp-nginx
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /var/www/html
          name: wp-persistent-storage
        - mountPath: /etc/nginx
          name: nginx
        - mountPath: /etc/nginx-conf/conf.d
          name: nginx-conf-d
        - mountPath: /etc/nginx-conf/global
          name: nginx-global
        - mountPath: /etc/nginx-conf/html
          name: nginx-html
        - mountPath: /var/run/nginx-cache
          name: cache
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: cloudsql-instance-credentials
        secret:
          secretName: cloudsql-instance-credentials
      - name: wp-persistent-storage
        persistentVolumeClaim:
          claimName: wp-wd-pv-claim
      - configMap:
          defaultMode: 420
          name: php
        name: php
      - configMap:
          defaultMode: 420
          name: nginx
        name: nginx
      - configMap:
          defaultMode: 420
          name: nginx-conf-d
        name: nginx-conf-d
      - configMap:
          defaultMode: 420
          name: nginx-global
        name: nginx-global
      - configMap:
          defaultMode: 420
          name: nginx-html
        name: nginx-html
      - emptyDir:
          medium: Memory
        name: cache
status: {}
