wp/tls-Ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: wp-wd
  namespace: wp-wd
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - www.abovecrypto.com
    secretName: wp-wd-tls
  rules:
  - host: www.abovecrypto.com
    http:
      paths:
      - path: /
        backend:
          serviceName: wp-wd
          servicePort: 80
